.kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-rag-estudos-service
spec:
  selector:
    # Pega o nome do nosso deployment q fica em labels
    app: app-rag-estudos
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
